webservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-webservice
spec:
  selector:
    app: cool-webservice
  ports:
  - port: 8080
    targetPort: 80
